--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,17 @@ backend/data/videos/
 backend/data/frames/
 backend/data/crops/
 backend/data/labels/
+backend/.venv/
+backend/app/
 
 # macOS
 .DS_Store
 backend/.DS_Store
+backend/.venv/pyvenv.cfg
+
+# Windows / 前端依赖与构建产物
+Thumbs.db
+frontend/node_modules/
+frontend/dist/
+frontend/.vite/
+frontend/vite.config.ts.timestamp-*.mjs
